# veesion_case

./: Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
config/: celery.py  settings.py  urls.py
notifications/: channels.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  views.py
notifications/migrations/: 0001_initial.py
notifications/tests/: common.py  test_models.py  test_tasks.py  test_views.py
