[project]
name = "veesion-dispatcher"
version = "0.1.0"
description = "Veesion Notification Dispatcher"
authors = [
    {name = "Griveau Jordan",email = "griveau.jordan@gmail.com"}
]
requires-python = ">=3.11.4"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
django = "5.2.0"
sqlalchemy = "^2.0.41"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
django-model-utils = "^5.0.0"
djangorestframework = "^3.16.0"
sentry-sdk = {extras = ["django"], version = "^2.28.0"}
celery = "^5.5.2"
redis = "^6.1.0"
httpx = "^0.28.1"
dj-database-url = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "^3.16.0"}
django-stubs = {extras = ["compatible-mypy"], version = "^5.2.0"}
celery-stubs = {extras = ["compatible-mypy"], version = "^0.1.3"}
